pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference5.pkl
import "pkl:ref"

class D extends ref.Domain {
  function referenceToString(data: Any, path: List<ref.Access>): String = throw("not supported")
}
local d: D = new {}
typealias Ref<T> = ref.Reference<D, T>

class D2 extends ref.Domain {
  function referenceToString(data: Any, path: List<ref.Access>): String = throw("not supported")
}
local d2: D2 = new {}

test = ref.Reference(d2, String, "") as Ref<String>
